--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>br.vmcorrea</groupId>
 	<artifactId>teste_api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>teste_api</name>
 	<description>Demo project for Spring Boot</description>
 
